src/test/run-pass/main-ivec.rs
fn main(args: ~[str]) { for args.each {|s| log(debug, s); } }
